added transmission and temperature info, and more remarks

--- a/docs/beamtime/20250701-als.md
+++ b/docs/beamtime/20250701-als.md
@@ -8,7 +8,7 @@ tags:
 
 # 2025-07-01 @ ALS 8.3.1
 
-James and Megahan continued data collection from Galen's macrodomain plate using a variety of mounting methods.
+James and Mehagan continued data collection from Galen's macrodomain plate using a variety of mounting methods.
 
 Data path (ALS): `/data/jamesh/diffUSE`
 
@@ -16,63 +16,90 @@ Dose rate of ~1000 Gy/s @ 1.25% transmission
 
 ## James' text notes
 
-Crystals being mounted from A1 to A2 of Galen's platefirst 6 done in paratone with no sleeve
+Crystals being mounted from Galen's plate
+the first six (xtal1-xtal6) were from wells A1 and A2. I tried free-air mounting in paratone-N oil (no sleeve). This didn't work too well.
 
 ```
-0017 A    xtal1_t1_1 1-7200
-0018 1.413A 5.55 P41 89.8700 89.8700 39.8100 90 90 90 xtal3_t1_1 1-7200
-0019 A    xtal5_t1_1 1-570
-0020 A    xtal6_t1_1 1-545
+XDS processing results:
+prefix range transmission  reso ISa SG cell
+xtal3_t1_1 1-7200 0.00032209  1.413A 5.55 P41 89.8700 89.8700 39.8100 90 90 90 
 ```
 
-A3: Mehagan opened well.  using sleeves
+the next two (xtal7-xtal8) Mehagan mounted out of A3. Still in paratone, but using sleeves. These worked better.
 
 ```
-0021 1.320A 7.58 P41 89.9400 89.9400 40.1000 90 90 90 xtal7_t1_1 1-7200
-0022 1.514A 9.16 P41 89.8300 89.8300 40.1700 90 90 90 xtal8_t1_1 1-682
+xtal7_t1_1 1-7200 0.00032209   1.320A 7.58 P41 89.9400 89.9400 40.1000 90 90 90 
+xtal8_t1_1 1-682  0.00032209   1.514A 9.16 P41 89.8300 89.8300 40.1700 90 90 90 
 ```
 
-A5: no oil with sleeve xtal=9
+next two (xtal9-xtal10) were from well A5. No oil with sleeve. 
+Two targets from same crystal. 
+Two backgrounds: 
+bg_2 at same attenuation as data, but collected from the kapton "neck" of the loop.
+bg_3 same, but with no attenuation.
 
 ```
-0023 1.204A 13.54 P41 89.8300 89.8300 40.4100 90 90 90 xtal9_t1_1 1-7200
-0024 1.198A 12.64 P41 89.8100 89.8100 40.4400 90 90 90 xtal9_t2_1 1-7200
-0025 A    xtal9_bg_2 1-720
-0026 A    xtal9_bg_3 1-720
+xtal9_t1_1 1-7200 0.0125744  1.204A 13.54 P41 89.8300 89.8300 40.4100 90 90 90  
+xtal9_t2_1 1-7200 0.0125744  1.198A 12.64 P41 89.8100 89.8100 40.4400 90 90 90 
+xtal9_bg_2 1-720 0.0125744
+xtal9_bg_3 1-720 1
 ```
 
-A6: santovac with sleeve x=10,11,12
+A6: drop and crystals covered in santovac-5 oil, also with sleeve xtals=10,11,12
+subscript "b" as in t2b is a "burn" run with no attenuation
 
 ```
-0027 1.427A 13.99 P41 89.7400 89.7400 39.9700 90 90 90 xtal10_t1_1 1-7200
-0028 1.571A 20.04 P41 89.7700 89.7700 40.1300 90 90 90 xtal10_t1b_2 1-1800
-0029 1.408A 15.88 P41 89.7200 89.7200 40.1700 90 90 90 xtal10_t2_1 1-7200
-0030 1.533A 16.36 P41 89.7900 89.7900 40.2300 90 90 90 xtal10_t2b_2 1-1800
-0031 A    xtal10_bg_3 1-720
-0032 A    xtal10_bg_4 1-720
-0033 1.366A 12.60 P41 89.7900 89.7900 40.3700 90 90 90 xtal11_t1_1 1-7200
-0034 1.250A 14.93 P41 89.8100 89.8100 40.3200 90 90 90 xtal11_t2_1 1-7200
-0035 A    xtal11_t3_1 1-7200
-0036 A    xtal11_bg_3 1-720
-0037 1.453A 7.99 P41 89.9600 89.9600 40.5300 90 90 90 xtal12_t1_1 1-7200
-0038 1.262A 15.70 P41 89.8100 89.8100 40.4000 90 90 90 xtal12_t2_1 1-3212
-0039 1.454A 8.80 P41 89.9800 89.9800 40.5900 90 90 90 xtal12_t3_1 1-7200
-0040 A    xtal12_bg_3 1-720
+xtal10_t1_1  1-7200 0.0125744 1.427A 13.99 P41 89.7400 89.7400 39.9700 90 90 90 
+xtal10_t1b_2 1-1800 1         1.571A 20.04 P41 89.7700 89.7700 40.1300 90 90 90 
+xtal10_t2_1  1-7200 0.0125744 1.408A 15.88 P41 89.7200 89.7200 40.1700 90 90 90 
+xtal10_t2b_2 1-1800 1         1.533A 16.36 P41 89.7900 89.7900 40.2300 90 90 90 
+xtal10_bg_3  1-720  0.0125744
+xtal10_bg_4  1-720  1
+xtal11_t1_1  1-7200 0.0125744  1.366A 12.60 P41 89.7900 89.7900 40.3700 90 90 90 
+xtal11_t2_1  1-7200 0.0125744  1.250A 14.93 P41 89.8100 89.8100 40.3200 90 90 90 
+xtal11_t3_1  1-7200 0.0125744
+xtal11_bg_3  1-720  1
+xtal12_t1_1  1-7200 0.0125744  1.453A 7.99 P41 89.9600 89.9600 40.5300 90 90 90 
+xtal12_t2_1 1-3212  0.0125744  1.262A 15.70 P41 89.8100 89.8100 40.4000 90 90 90 
+xtal12_t3_1 1-7200  0.0125744  1.454A 8.80 P41 89.9800 89.9800 40.5900 90 90 90 
+xtal12_bg_3 1-720   1
 ```
 
 beam drift problem: by end of run: 834.3 Gy/s unattenuated
 
 tuned up to do runs 2 and beyond for xtal12
+from here on I am certain about the dose rate being 1 kGy/s for transmission=0.0126
+next round was re-visiting the three targets on xtal12
 
 ```
-0041 1.274A 15.51 P41 89.9000 89.9000 40.5700 90 90 90 xtal12_t1_2 1-7200
-0042 1.222A 18.01 P41 89.8100 89.8100 40.5400 90 90 90 xtal12_t2_2 1-7200
-0043 A    xtal12_t3_2 1-7200
-0044 2.055A 13.54 P41 89.8300 89.8300 40.4900 90 90 90 xtal12_t1b_3 1-7200
-0045 1.671A 20.42 P41 90.0100 90.0100 40.5900 90 90 90 xtal12_t2b_3 1-7200
-0046 A    xtal12_t3b_3 1-7200
-0047 1.287A 16.96 P41 89.9100 89.9100 40.6400 90 90 90 xtal12_t4_1 1-7200
-0048 1.618A 20.67 P41 90.1100 90.1100 40.6700 90 90 90 xtal12_t4_2 1-7200
-0049 1.406A 11.63 P41 89.9000 89.9000 40.6300 90 90 90 xtal12_t5cool_2 1-7200
-0050 1.903A 23.31 P41 89.3600 89.3600 39.3400 90 90 90 xtal12_t5cool_3 1-7200
+xtal12_t1_2  1-7200 0.0125744   1.274A 15.51 P41 89.9000 89.9000 40.5700 90 90 90 
+xtal12_t2_2  1-7200 0.0125744   1.222A 18.01 P41 89.8100 89.8100 40.5400 90 90 90 
+xtal12_t3_2  1-7200 0.0125744   failed
+```
+and again, this time unattenuated
+```
+xtal12_t1b_3 1-7200 1           2.055A 13.54 P41 89.8300 89.8300 40.4900 90 90 90 
+xtal12_t2b_3 1-7200 1           1.671A 20.42 P41 90.0100 90.0100 40.5900 90 90 90 
+xtal12_t3b_3 1-7200 1           failed
+```
+target 4 was in between two pre-burned areas (1 and 2), to see impact of nearby rad dam
+
+```
+xtal12_t4_1 1-7200 0.0125744    1.287A 16.96 P41 89.9100 89.9100 40.6400 90 90 90 
+xtal12_t4_2 1-7200 0.0125744    1.618A 20.67 P41 90.1100 90.1100 40.6700 90 90 90
+```
+And, finally, because we were going home, I turned on the cryo stream to start cooling it down as we collected. Target 5 was, again, in between targets 2 and 3.
+```
+xtal12_t5cool_2 1-7200 0.0125744    1.406A 11.63 P41 89.9000 89.9000 40.6300 90 90 90 
+xtal12_t5cool_3 1-7200 0.0125744    1.903A 23.31 P41 89.3600 89.3600 39.3400 90 90 90 
+```
+Next day, collected on two more crystals from well A6. Still under santovac-5 oil,
+but cryo-cooled.
+```
+xtal_1_T1    1-7200 1   1.274A 13.15 P41 89.0700 89.0700 39.6900 90 90 90 
+xtal_1_air_2 1-720  1
+xtal_1_T2    1-7200 1   1.114A 14.45 P41 88.8600 88.8600 39.4700 90 90 90 
+xtal_1_T3    1-2289 1   1.267A 1.46  P41 88.9900 88.9900 39.5900 90 90 90 
+xtal_2_T2_1  1-7200 1   1.181A 10.48 P41 88.8500 88.8500 39.6100 90 90 90 
+xtal_2_air   1-720  1
 ```
