added directory info

--- a/docs/beamtime/20250701-als.md
+++ b/docs/beamtime/20250701-als.md
@@ -10,7 +10,7 @@ tags:
 
 James and Mehagan continued data collection from Galen's macrodomain plate using a variety of mounting methods.
 
-Data path (ALS): `/data/jamesh/diffUSE`
+Data path (ALS): `/data/jamesh/diffUSE /data/mehaganh/diffuse`
 
 Dose rate of ~1000 Gy/s @ 1.25% transmission
 
