update for 9/24/2025 CHESS beamtime

--- a/docs/beamtime/20250701-als.md
+++ b/docs/beamtime/20250701-als.md
@@ -3,14 +3,17 @@ date:
   created: 2025-08-08
 tags:
     - ALS 8.3.1
-    - Macrodomain
+    - Mac1
 ---
 
 # 2025-07-01 @ ALS 8.3.1
 
 James and Mehagan continued data collection from Galen's macrodomain plate using a variety of mounting methods.
 
-Data path (ALS): `/data/jamesh/diffUSE /data/mehaganh/diffuse`
+Data path (ALS): 
+
+- Day 1: `/data/jamesh/diffUSE /data/mehaganh/diffuse`
+- Day 2: `/data/mehaganh/diffuse/02Jul2025/`
 
 Dose rate of ~1000 Gy/s @ 1.25% transmission
 
