fixed figure caption

--- a/docs/beamtime/20260924-chess.md
+++ b/docs/beamtime/20260924-chess.md
@@ -27,10 +27,10 @@ Steve M, Xiaokun P, Sarah H, Marcus G (Ando lab), John I (CHESS). Steve arrived 
 - ![Ando group](20250924-chess/andogroup.jpg)
 Xiaokun, Steve, Marcus & Sarah at 7b2 (left-to-right) 
 
-- ![Sarah in the hutch](20250924-chess/sarah.jpg)
+- ![Sarah in the hutch](20250924-chess/sarah_7b2.jpg)
 Sarah H mounting a crystal in the 7b2 hutch
 
-- ![Sarah at the station](20250924-chess/sarah_7b2.jpg)
+- ![Sarah at the station](20250924-chess/sarah.jpg)
 Sarah H collecting lysozyme data
 
 </div>
