beamtime page for 20251015-chess

--- a/docs/beamtime/20251008-chess.md
+++ b/docs/beamtime/20251008-chess.md
@@ -75,7 +75,7 @@ Free-mounted sample on the goniometer. The view is looking toward the X-ray sour
 Name | Sample | Well composition | Drop composition | Notes
 --- | --- | --- | --- | --- 
 Lysozyme | Chicken egg white lysozyme. | NaCl and NaOAc   |  | Practice tray, for calibration and testing purposes only
-Mac1 | SARS CoV2 NSP3 macrodomain and seed stock from UCSF. 40 mg/mL Mac1 in 150 mM NaCl, 20 mM Tris pH 8, 5% glycerol | 28-38% (w/vol) PEG 3000 + 100 mM CHES (pH 9.5) | Row B: 2 µl protein solution + 1 ul well solution + 1 ul seeds <br> Row C: 2 µl protein solution + 1 ul well solution + 1 ul seeds (diluted 10x) | Mac1 tray #1 (Katie Lu). Drops were set up on 9/30/2025 (row B) and 10/2/2025 (row C). See Katie Lu lab notebook p. 10-13
+Mac1 | SARS CoV2 NSP3 macrodomain and seed stock from UCSF. 40 mg/mL Mac1 in 150 mM NaCl, 20 mM Tris pH 8, 5% glycerol | 28-38% (w/vol) PEG 3000 + 100 mM CHES (pH 9.5) | Row B: 2 µl protein solution + 1 ul well solution + 0.25 ul seeds <br> Row C: 2 µl protein solution + 1 ul well solution + 1 ul seeds (diluted 10x) | Mac1 tray #1 (Katie L). Drops were set up on 9/30/2025 (row B) and 10/2/2025 (row C). See Katie L lab notebook p. 10-13
 DNA | S2T7-1, S2T7-2, and S2T7-3 single strands at 50 µM in 40 mM tris acetate, 2 mM EDTA | 125 mM tris acetate, 37.5 mM Mg acetate, 1.75 M ammonium sulfate | 6 µL DNA + 6 µL of 40 mM tris acetate, 25 mM Mg acetate, 1.17 M ammonium sulfate | DNA tray #1, "condition 2". See Steve Meisburger Ando Lab notebook #3, pg 48-49.
 
 <div class="grid cards" markdown>
@@ -115,28 +115,7 @@ Test of the humid gas stream. The humid gas creates fog on the glass slide. A dr
 - ![mac1_harvesting](20251008-chess/mac1_harvesting.jpg)
 Mac1 crystallization drop in the humid gas stream. A drop of NVH oil was placed next to the crystal drop. Crystals were looped and transferred to oil. Excess oil was dabbed away, and then crystals were free-mounted on the goniometer (no capillary).
 
-</div>
-
-<!--
-
-
-
-
-
-Subdirectory: `mac1/mac_1`
-
-| prefix     |   φ0 (deg.) |   φ1 (deg.) |   ∆φ (deg.) |   images |   ∆t (s) |   tf (%) |   d (mm) |   E (keV) |
-|------------|-------------|-------------|-------------|----------|----------|----------|----------|-----------|
-| mac_1_1597 |           0 |         360 |         0.1 |     3600 |    0.008 |      100 |      999 |        14 |
-
-Subdirectory: `mac1/mac_2`
-
-| prefix        |   φ0 (deg.) |   φ1 (deg.) |   ∆φ (deg.) |   images |   ∆t (s) |   tf (%) |   d (mm) |   E (keV) |
-|---------------|-------------|-------------|-------------|----------|----------|----------|----------|-----------|
-| mac_2_1601    |           0 |         360 |         0.1 |     3600 |    0.008 |      100 |      185 |        14 |
-| mac_2_bg_1602 |           0 |         360 |         1   |      360 |    0.08  |      100 |      185 |        14 |
-
--->
+</div> 
 
 ### Lysozyme
 
