--- a/docs/beamtime/20251015-chess.md
+++ b/docs/beamtime/20251015-chess.md
@@ -66,15 +66,20 @@ Snapped an image of the beam on fluorescent screen: `setup/beam_image_onaxis_zoo
 
 Name | Sample | Well composition | Drop composition | Notes
 --- | --- | --- | --- | --- 
-Lysozyme | Hen egg lysozyme, 50 mg/mL in NaOAc | 0.6 - 1.1 M NaCl, 100 mM NaOAc pH 4.3 - 4.8 | 2 μL protein solution + 2 μL well solution | Practice lysozyme tray (Jon C, 10/9/2025). See Jon C Ando Lab Notebook pp. 6-9
+Lysozyme | Hen egg lysozyme, 50 mg/mL in NaOAc | 0.6 - 1.1 M NaCl, 100 mM NaOAc pH 4.3 - 4.8 | 2 μL protein solution + 2 μL well solution | Two trays were used: Jon C's practice tray (10/9/2025, see Jon C Ando Lab Notebook pp. 6-9) and Gio K's practice tray (10/9/2025, see Gio K Ando Lab Notebook pp. 10-12)
 Mac1 | SARS CoV2 NSP3 macrodomain and seed stock from UCSF. 40 mg/mL Mac1 in 150 mM NaCl, 20 mM Tris pH 8, 5% glycerol | 28-38% (w/vol) PEG 3000 + 100 mM CHES (pH 9.5) | Row B: 2 µl protein solution + 1 ul well solution + 0.25 ul seeds <br> Row C: 2 µl protein solution + 1 ul well solution + 1 ul seeds (diluted 10x) | Mac1 tray #1 (Katie L). Drops were set up on 9/30/2025 (row B) and 10/2/2025 (row C). See Katie L lab notebook p. 10-13
 DNA | S2T7-1, S2T7-2, and S2T7-3 single strands at 50 µM in 40 mM tris acetate, 2 mM EDTA | 125 mM tris acetate, 37.5 mM Mg acetate, 1.75 M ammonium sulfate | 6 µL DNA + 6 µL of 40 mM tris acetate, 25 mM Mg acetate, 1.17 M ammonium sulfate | DNA tray #1, "condition 2". See Steve Meisburger Ando Lab notebook #3, pg 48-49.
 
 <div class="grid cards" markdown>
 
 - ![lys_B4](20251015-chess/lys_B4.jpg)<br>
-Well B4 of practice lysozyme tray (Jon C, 10/9/2025). 
+Well B4 of Jon's practice lysozyme tray (10/9/2025). 
 Well solution: 0.9 M NaCl, 100 mM NaOAc pH 4.4. 
+Drop: 2 µl protein solution + 2 µl well solution. 
+
+- ![lys_B2](20251015-chess/lys_B2.jpg)<br>
+Well B2 of Gio's practice lysozyme tray (10/9/2025). 
+Well solution: 0.7 M NaCl, 100 mM NaOAc pH 4.4. 
 Drop: 2 µl protein solution + 2 µl well solution. 
 
 - ![dna_A6](20251015-chess/dna_A6.jpg)<br>
@@ -227,7 +232,7 @@ Processed scan 2075 with xia2: resolution: 1.7 Å, mosaic spread: 0.285˚, unit 
 
 #### Crystal #6
 
-Gio looped a lysozyme crystal from his practice tray (documentation needed), and placed within a micro RT tube with well solution in the tip. The sample was mounted in the cold stream set to 315 K.
+Gio looped a lysozyme crystal from well B2 of his practice tray, and placed within a micro RT tube with well solution in the tip. The sample was mounted in the cold stream set to 315 K.
 
 Subdirectory: `lysozyme/calibration_sample/lys_cal3`
 
