--- a/docs/beamtime/20251105-chess.md
+++ b/docs/beamtime/20251105-chess.md
@@ -33,7 +33,7 @@ Steve M, Xiaokun P, Katie L, Sarah H, Marcus G, Shaheer K (from Ando lab), Kara 
 - ![Participants on day 1](20251105-chess/joseph_steve_justin_kara_sarah_xiaokun.jpg)<br>
 Participants during the afternoon of day 1 (left to right): Joseph, Steve, Justin, Kara, Sarah, and Xiaokun. Marcus, Shaheer, and Katie arrived later (not shown).
 
-- ![Justin and Jacob](20251105-chess/justin_joseph.jpg)<br>
+- ![Justin and Joseph](20251105-chess/justin_joseph.jpg)<br>
 Justin and Joseph running mdx2 on a Voltage Park node during data collection.
 
 - ![](20251105-chess/kara_mac1.jpg)<br>
