added rag_8 xia2 processing

--- a/docs/beamtime/20251105-chess.md
+++ b/docs/beamtime/20251105-chess.md
@@ -1197,6 +1197,17 @@ Subdirectory: `RAG_ATCase`
 
 ??? info "xia2 processing"
 
-    WIP
+    |                 | rag_8_3707                                 |
+    |-----------------|--------------------------------------------|
+    | Mosaic spread   | 0.041                                      |
+    | Resolution      | 3.45                                       |
+    | Unit Cell       | [129.64, 148.25, 209.35, 90.0, 90.0, 90.0] |
+    | Image range     | [1, 3600]                                  |
+    | Completeness    | 100.0                                      |
+    | Multiplicity    | 14.0                                       |
+    | I/sigma         | 2.0                                        |
+    | Rpim            | 0.193                                      |
+    | Wilson B factor | 63.03                                      |
+    | Space group     | P 21 21 21                                 |
 
 !!! success "Done"
