added missing mac1 crystal information

--- a/docs/beamtime/20251105-chess.md
+++ b/docs/beamtime/20251105-chess.md
@@ -106,13 +106,6 @@ ATCase | _Escherichia coli_ Aspartate Transcarbamoylase and seed stock. 16 µM h
 
 <div class="grid cards" markdown>
 
-<!--
-- ![lys_B4](20251015-chess/lys_B4.jpg)<br>
-Well B4 of Jon's practice lysozyme tray (10/9/2025). 
-Well solution: 0.9 M NaCl, 100 mM NaOAc pH 4.4. 
-Drop: 2 µl protein solution + 2 µl well solution. 
--->
-
 - ![lys_B2](20251105-chess/lys_B2.jpg)<br>
 Well B2 of Shaheer's lysozyme tray (9/16/2025)
 Well solution: 0.7 M NaCl, 0.1 M NaOAc pH = 4.4.
@@ -183,12 +176,6 @@ Well C2 of RAG-ATCase tray #2 (10/7/2025).
 Well solution: 8% v/v Tacsimate pH 7.0, 12.5% PEG-3350.
 Drop: 2 µL protein + 1 µL well solution + 1 µL seed stock.
 
-<!--
-- Well C3 of RAG-ATCase tray #2 (10/7/2025).
-Well solution: 8% v/v Tacsimate pH 7.0, 13% PEG-3350.
-Drop: 2 µL protein + 1 µL well solution + 1 µL seed stock.
--->
-
 - ![RAG_ATCase_B6](20251105-chess/RAG_tray2_B6.jpg)<br>
 Well B6 of RAG-ATCase tray #2 (10/7/2025).
 Well solution: 8% v/v Tacsimate pH 7.0, 15% PEG-3350.
@@ -211,41 +198,11 @@ Drop: 3.75 µl DNA solution + 1.25 µl of well solution
 
 </div>
 
-<!--
-List of all the samples:
-
-- Lysozyme, Shaheer's tray, well B5, B2 (right drop)
-- Mac1, Katie's tray #2, well A3, B1, B4
-- NrdE, Marcus' tray #2, well A4 (right drop), C3 (right drop), B5 (right drop), well A5 (right drop)
-- ATCase, Sarah's RAG tray #2 (10/7/2025), well C1, B6, C1, C2, C3
-- ATCase, Sarah's R tray (10/29/25), well B6
-- DNA, Steve's tray #2, B6, A6
-
-Mac1 samples (according to Kara)
-
-- mac1_1, 2 were big crystal tray
-- mac1_3 was older tray
-- mac1_4,5 were katie, big tray
-- mac1_6--10 were older tray
--->
-
 ## Data collection, day 1
 
 Samples for room temperature data collection were harvested in the humidity chamber (100 % RH). Reusable MiTeGen bases are used with micro RT capillaries cut to length, with 10 µL of well solution in the tip.
 
 With the large number of participants, we sometimes had multiple projects going at once. Note that the following is organized chronologically rather than by project.
-<!-- 
-### 1. Lysozyme
-
-Steve looped at ~600 µm lysozyme crystal from well B5 of Shaheer's trya using a 500 µm loop, micro RT with 10 µL well solution in the tip. Harvested in humid chamber at ~100% RH.
-
-New directory: `lysozyme/calibration_sample/lys_cal1`
-
-Saved 12 images (full rotation, every 30 degrees), top view, zoom 2.
-
-3616 and 3617 were collected from different locations.
-
-###  -->
 
 ### 1. Lysozyme
 
@@ -351,7 +308,7 @@ Saved a photo of the cracked crystal: `MG_A4r_cracked_tvc_zoom4_1.png`
 
 ### 4. Mac1 + ADPr
 
-Kara added 1 µL of 200 mM ADP-ribose to the crystal drop, pipetted up and down, and waited for ~10 minutes before looping. 10 µL of well solution was added to a new sleeve (re-used loop).
+Kara added 1 µL of 200 mM ADP-ribose to the crystal drop, pipetted up and down, and waited for ~10 minutes before looping. 10 µL of well solution was added to a new sleeve (re-used loop). The crystal came from Katie's Mac1 tray #2, but the particular well was not recorded.
 
 Subdirectory: `mac1/mac1_2_adpr`
 
@@ -418,7 +375,7 @@ Saved 12 images per 30˚: `MG_C3r_adpr_tvc_zoom4_{01..12}.png`
 
 ### 6. Mac1 + ADPr
 
-Kara made a drop of 9 µL reservoir solution and added 1 µL of 200 mM ADPr. She looped a few crystals into the drop, and let soak for ~10 minutes.
+Kara made a drop of 9 µL reservoir solution and added 1 µL of 200 mM ADPr. She looped a few crystals into the drop, and let soak for ~10 minutes. The crystal came from Katie's Mac1 tray #1. The well was not recorded, but was one of C1, C2, or C3.
 
 Subdirectory: `mac1/mac1_3_adpr`
 
@@ -620,7 +577,7 @@ Vector scan along the length of the crystal was used to distribute the dose.
 
 ### 13. Mac1 + ADPr
 
-Kara made a new drop with 9 µL reservoir solution + 1 µL 200 mM ADPr, looped mac1 crystal (which well? which tray?) and put it into the new drop. Allowed to soak for 30 minutes before harvesting.
+Kara made a new drop with 9 µL reservoir solution + 1 µL 200 mM ADPr, looped mac1 crystal and put it into the new drop. Allowed to soak for 30 minutes before harvesting. The crystal came from Katie's Mac1 tray #1. The well was not recorded, but was one of C1, C2, or C3.
 
 Subdirectory: `mac1/mac1_6_adpr`
 
@@ -679,7 +636,7 @@ Vector scan along the length of the crystal to distribute dose.
 
 ### 15. Mac1 + ADPr
 
-Kara looped mac1 crystal (which well? which tray?) and put it into a drop with 9 µL reservoir solution + 1 µL 200 mM ADPr. Allowed to soak for 30 minutes before harvesting.
+Kara looped mac1 crystal and put it into a drop with 9 µL reservoir solution + 1 µL 200 mM ADPr. Allowed to soak for 30 minutes before harvesting. The crystal came from Katie's Mac1 tray #1. The well was not recorded, but was one of C1, C2, or C3.
 
 Subdirectory: `mac1/mac1_7_adpr`
 
@@ -707,7 +664,7 @@ Saved images very 30˚: `mac1_7_adpr_190_30_tvc_zoom4_{01..12}.png`
 
 ### 16. Mac1 + ADPr
 
-Kara looped mac1 crystal (which well? which tray?) and put it into a drop with 9 µL reservoir solution + 1 µL 200 mM ADPr. Allowed to soak for 45 minutes before harvesting.
+Kara looped mac1 crystal and put it into a drop with 9 µL reservoir solution + 1 µL 200 mM ADPr. Allowed to soak for 45 minutes before harvesting. The crystal came from Katie's Mac1 tray #1. The well was not recorded, but was one of C1, C2, or C3.
 
 Subdirectory: `mac1/mac1_8_adpr`
 
@@ -735,7 +692,7 @@ Saved images every 30˚: `mac1_8_adpr_190_30_tvc_zoom4_{01..12}.png`
 
 ### 17. Mac1 + ADPr
 
-Kara looped mac1 crystal (which well? which tray?) and put it into a drop with 9 µL reservoir solution + 1 µL 200 mM ADPr. Allowed to soak for 45 minutes before harvesting.
+Kara looped mac1 crystal and put it into a drop with 9 µL reservoir solution + 1 µL 200 mM ADPr. Allowed to soak for 45 minutes before harvesting. The crystal came from Katie's Mac1 tray #1. The well was not recorded, but was one of C1, C2, or C3.
 
 Subdirectory: `mac1/mac1_9_adpr`
 
