added OSN directory for October ALS beamtime

--- a/docs/beamtime/20251015-17-als.md
+++ b/docs/beamtime/20251015-17-als.md
@@ -23,7 +23,9 @@ Kara and Violla
 
 ## Data
 
-**Root directory at ALS:** `/data/mcfuser/ucsf/fraser/15Oct2025/diffuse`
+**Root directory at ALS:** `/data/mcfuser/ucsf/fraser/15Oct2025/diffuse/`
+
+**Root directory on OSN:** `s3://diffuse-als-public/20251015/`
 
 ### Beamline Settings
 
