added OSN directories to all logbooks

--- a/docs/beamtime/20250624-als.md
+++ b/docs/beamtime/20250624-als.md
@@ -10,6 +10,10 @@ tags:
 
 An impromptu trip to ALS during Astera meeting. We collected diffraction data from several SARS-CoV-2 NSP3 macrodomain crystals at room temperature.
 
+**Root directory at ALS:** `/data/mcfuser/cornell/meisberger/macro/6-23-25/`
+
+**Root directory on OSN:** `s3://diffuse-als-public/20250624/` (*selected datasets only)
+
 - James, Mehagan, and Steve collected data from 4 macrodomain crystals harvested from a single tray "Plate 1" provided by JF's lab.
 - There was some messing around before we got the dose right. So each dataset had different beam properties (divergence & flux).
 - The crystals were of moderate size (~ 100 x 200 x 200 µm^3)
