--- a/docs/beamtime/20250701-als.md
+++ b/docs/beamtime/20250701-als.md
@@ -10,12 +10,14 @@ tags:
 
 James and Mehagan continued data collection from Galen's macrodomain plate using a variety of mounting methods.
 
-Data path (ALS): 
-
-- Day 1: `/data/jamesh/diffUSE /data/mehaganh/diffuse`
-- Day 2: `/data/mehaganh/diffuse/02Jul2025/`
-
 Dose rate of ~1000 Gy/s @ 1.25% transmission
+
+**Root directories:**
+
+<!----> | ALS 8.3.1 | OSN
+--- | --- | --- 
+Day 1 | `/data/jamesh/diffUSE/` | `s3://diffuse-als-public/20250701/`
+Day 2 | `/data/mehaganh/diffuse/02Jul2025/` | `s3://diffuse-als-public/20250702/`
 
 ## James' text notes
 
