--- a/docs/beamtime/20250924-chess.md
+++ b/docs/beamtime/20250924-chess.md
@@ -37,7 +37,9 @@ Sarah H collecting lysozyme data
 
 ## Data
 
-Root directory at CHESS: `/nfs/chess/raw/2025-3/id7b2/meisburger/20250924`
+Root directory at CHESS: `/nfs/chess/raw/2025-3/id7b2/meisburger/20250924/`
+
+Root directory on OSN: `s3://diffuse-chess-public/20250924/`
 
 ## Beamline setup
 
