--- a/docs/beamtime/20251008-chess.md
+++ b/docs/beamtime/20251008-chess.md
@@ -42,7 +42,9 @@ Mike installing the prototype guard aperture
 
 ## Data
 
-Root directory at CHESS: `/nfs/chess/raw/2025-3/id7b2/meisburger/20251008`
+Root directory at CHESS: `/nfs/chess/raw/2025-3/id7b2/meisburger/20251008/`
+
+Root directory on OSN: `s3://diffuse-chess-public/20251008/`
 
 ## Beamline setup
 
