--- a/docs/beamtime/20251015-chess.md
+++ b/docs/beamtime/20251015-chess.md
@@ -33,7 +33,9 @@ Jon, Steve, Min & Gio (left-to-right) in the 7b2 hutch. Katie and Sarah arrived 
 
 ## Data
 
-Root directory at CHESS: `/nfs/chess/raw/2025-3/id7b2/meisburger/20251015`
+Root directory at CHESS: `/nfs/chess/raw/2025-3/id7b2/meisburger/20251015/`
+
+Root directory on OSN: `s3://diffuse-chess-public/20251015/`
 
 ## Beamline setup
 
