fixed table formatting

--- a/docs/beamtime/20250701-als.md
+++ b/docs/beamtime/20250701-als.md
@@ -14,10 +14,10 @@ Dose rate of ~1000 Gy/s @ 1.25% transmission
 
 **Root directories:**
 
-<!----> | ALS 8.3.1 | OSN
---- | --- | --- 
-Day 1 | `/data/jamesh/diffUSE/` | `s3://diffuse-als-public/20250701/`
-Day 2 | `/data/mehaganh/diffuse/02Jul2025/` | `s3://diffuse-als-public/20250702/`
+| | ALS 8.3.1 | OSN |
+| --- | --- | --- |
+| Day 1 | `/data/jamesh/diffUSE/` | `s3://diffuse-als-public/20250701/` |
+| Day 2 | `/data/mehaganh/diffuse/02Jul2025/` | `s3://diffuse-als-public/20250702/` |
 
 ## James' text notes
 
