--- a/docs/beamtime/20251119-chess.md
+++ b/docs/beamtime/20251119-chess.md
@@ -10,13 +10,6 @@ tags:
     - Insulin
 ---
 
-<!-- TO DO: 
-
-- Add references to snapshots for all samples
-- Verify sample info
-
- -->
-
 # 2025-11-19 @ CHESS 7b2
 
 Final CHESS beam time of the 2025-3 run cycle.
@@ -68,7 +61,7 @@ Steve arrived at ~10 am. John I and Tricia C set up the beamline. The flux is co
 <div class="grid cards" markdown>
 
 - ![tools](20251119-chess/tools.jpg)<br>
-Steve constructed a "sheet on sheet" (SOS) style serial chip using some double-sided tape, thick Kapton, a hole punch, and some 2.5 µm this mylar film. 
+Steve constructed a "sheet on sheet" (SOS) style serial chip using some double-sided tape, thick Kapton, a hole punch, and some 2.5 µm thick mylar film. 
 
 - ![chip](20251119-chess/chip_open.jpg)<br>
 The SOS chip has two halves. A drop containing crystals is added to one mylar surface, and the other half is placed on top (no spacer). The static cling of the mylar is enough to hold the pieces in place.
@@ -83,10 +76,11 @@ The SOS chip mounted on the goniometer. The prototype scatter guard tube / on-ax
 Name | Sample | Well composition | Drop composition | Notes
 --- | --- | --- | --- | --- 
 Lysozyme | 50 mg/mL lysozyme in 20 mM NaOAc pH 4.6 | 0.7-1.0 M NaCl, 0.1 M NaOAc pH 4.4 | 2 µL protein + 2 µL well solution | Shaheer's lysozyme tray (9/16/25).
-Mac1 | SARS CoV2 NSP3 macrodomain and seed stock from UCSF. 40 mg/mL Mac1 in 150 mM NaCl, 20 mM Tris pH 8, 5% glycerol | 28-38% (w/vol) PEG 3000 + 100 mM CHES (pH 9.5) |     |    |
-ATCase | _Escherichia coli_ Aspartate Transcarbamoylase and seed stock. 16 µM holoenzyme in 40 mM Tris pH 7.5, 15 mM MgCl2, 1 mM TCEP, 2 mM PALA | 8% v/v Tacsimate pH 7.0, 5-15% PEG-3350 | 2 µL protein + 1 µL well solution + 1 µL seed stock | R-ATCase tray #1 (10/29/2025). See Sarah H Ando Lab notebook p. 103.
-DNA | S2T7-1, S2T7-2, and S2T7-3 single strands at 50 µM in 40 mM tris acetate, 2 mM EDTA | 125 mM tris acetate, 37.5 mM Mg acetate, 1.75 M ammonium sulfate | 6 µL DNA + 6 µL of 40 mM tris acetate, 25 mM Mg acetate, 1.17 M ammonium sulfate | DNA tray #1, "condition 2". See Steve Meisburger Ando Lab notebook #3, pp. 48, 49.
-Insulin | | | 
+Insulin | 20 mg/mL bovine insulin in 20 mM Na~2~HPO~4~ 10 mM EDTA | 225-350 mM Na~2~HPO~4~/Na~3~PO~4~ (pH 10.0-10.6), 10 mM EDTA | 4 µL protein solution + 4 µL well solution | Insulin tray #1 (11/6/2025). See Shaheer K Ando Lab notebook p. 17
+ATCase | _Escherichia coli_ Aspartate Transcarbamoylase and seed stock. 16 µM holoenzyme in 40 mM Tris pH 7.5, 15 mM MgCl2, 1 mM TCEP, 2 mM PALA | 8% v/v Tacsimate pH 7.0, 5-15% PEG-3350 | 2 µL protein + 1 µL well solution + 1 µL seed stock | R-ATCase tray #1 (10/29/2025). See Sarah H Ando Lab notebook p. 103
+Mac1 | SARS CoV2 NSP3 macrodomain and seed stock from UCSF. 40 mg/mL Mac1 in 150 mM NaCl, 20 mM Tris pH 8, 5% glycerol | 30% (w/vol) PEG 3000 + 100 mM CHES (pH 9.5) |  2 µL protein + 1 µL well solution + 1 µL seeds (undiluted)   | Mac1 tray #3 (11/13/2025). See Katie L Ando Lab notebook p. 20 |
+DNA | S2T7-1, S2T7-2, and S2T7-3 single strands at 50 µM in 40 mM tris acetate, 2 mM EDTA | 125 mM tris acetate, 37.5 mM Mg acetate, 1.75 M ammonium sulfate | 6 µL DNA + 6 µL of 40 mM tris acetate, 25 mM Mg acetate, 1.17 M ammonium sulfate | DNA tray #1, "condition 2". See Steve Meisburger Ando Lab notebook #3, pp. 48, 49
+
 
 <!-- TO DO: get sample information 
 
@@ -103,39 +97,43 @@ Well solution: ?? M NaCl, 0.1 M NaOAc pH = ??.
 Drop: 2 uL of lysozyme + 2 uL well solution
 
 - ![insulin_A1](20251119-chess/insulin_A1.jpg)<br>
-Well A1 of Shaheer's insulin tray
+Well A1 of Insulin tray #1 (11/6/2025).
+Well solution: 225 mM Na~2~HPO~4~/Na~3~PO~4~ pH 10.0, 10 mM EDTA.
+Drop: 4 µL protein solution + 4 µL well solution.
 
 - ![insulin_A2](20251119-chess/insulin_A2.jpg)<br>
-Well A2 of Shaheer's insulin tray
+Well A2 of Insulin tray #1 (11/6/2025).
+Well solution: 250 mM Na~2~HPO~4~/Na~3~PO~4~ pH 10.0, 10 mM EDTA.
+Drop: 4 µL protein solution + 4 µL well solution.
 
 - ![Mac1_tray3_B1](20251119-chess/11_18_Mac1_B1.jpg)<br>
 Well B1 of Mac1 tray #3 (11/13/25).
-Well solution: ??% (w/vol) PEG 3000 + 100 mM CHES (pH 9.5).
-Drop: 2 µl protein solution + 1 ul well solution + 1 ul seeds (??)
+Well solution: 30% (w/vol) PEG 3000 + 100 mM CHES (pH 9.5).
+Drop: 2 µl protein solution + 1 ul well solution + 1 ul seeds.
 
 - ![Mac1_tray3_B2](20251119-chess/11_18_Mac1_B2.jpg)<br>
 Well B2 of Mac1 tray #3 (11/13/25).
-Well solution: ??% (w/vol) PEG 3000 + 100 mM CHES (pH 9.5).
-Drop: 2 µl protein solution + 1 ul well solution + 1 ul seeds (??)
+Well solution: 30 (w/vol) PEG 3000 + 100 mM CHES (pH 9.5).
+Drop: 2 µl protein solution + 1 ul well solution + 1 ul seeds.
 
 - ![R_ATCase_A1](20251119-chess/atcase_A1.jpg)<br>
 Well A1 of R-ATCase tray (10/29/25). 
-Well solution: 8% v/v Tacsimate pH 7.0, ??% PEG-3350.
+Well solution: 8% v/v Tacsimate pH 7.0, 5% PEG-3350.
 Drop: 2 µL protein + 1 µL well solution + 1 µL seed stock.
 
 - ![R_ATCase_A2](20251119-chess/atcase_A2.jpg)<br>
 Well A2 of R-ATCase tray (10/29/25). 
-Well solution: 8% v/v Tacsimate pH 7.0, ??% PEG-3350.
+Well solution: 8% v/v Tacsimate pH 7.0, 7% PEG-3350.
 Drop: 2 µL protein + 1 µL well solution + 1 µL seed stock.
 
 - ![R_ATCase_B1](20251119-chess/atcase_B1.jpg)<br>
 Well B1 of R-ATCase tray (10/29/25). 
-Well solution: 8% v/v Tacsimate pH 7.0, ??% PEG-3350.
+Well solution: 8% v/v Tacsimate pH 7.0, 5% PEG-3350.
 Drop: 2 µL protein + 1 µL well solution + 1 µL seed stock.
 
 - ![R_ATCase_B3](20251119-chess/atcase_B3.jpg)<br>
 Well B3 of R-ATCase tray (10/29/25). 
-Well solution: 8% v/v Tacsimate pH 7.0, ??% PEG-3350.
+Well solution: 8% v/v Tacsimate pH 7.0, 9% PEG-3350.
 Drop: 2 µL protein + 1 µL well solution + 1 µL seed stock.
 
 - ![dna_A5](20251119-chess/dna_1_A5.jpg)<br>
@@ -453,7 +451,7 @@ One of the piezo stages stopped moving, so we had to end data collection until i
 
 Keith and John were able to repair the piezo stage. The problem had something to do with the amplifier card. Thankfully, beamline 4B was not using theirs, and we were able to borrow it for the remainder of the run. Raley collected data during the day (for non-Diffuse Ando Lab beamtime) and Steve returned in the evening after she had finished. 
 
-The setup is similar to day 1, except Steve inserted the CRL, which defocused the beam somewhat and increased the flux. Saved a beam picture using the on-axis camera and centering tool (YAG crystal): `setup/beam_crl_oac_zoom4_1.png`. These are the parameters that have changed since Day 1:
+The setup is similar to day 1, except Steve inserted the CRL, which focused the beam somewhat and increased the flux. Saved a beam picture using the on-axis camera and centering tool (YAG crystal): `setup/beam_crl_oac_zoom4_1.png`. These are the parameters that have changed since Day 1:
 
 parameter | value | notes
 --- | --- | --- 
