added updated log book
note about the extra bg images for mac1_12

--- a/docs/beamtime/20251125-als.md
+++ b/docs/beamtime/20251125-als.md
@@ -256,7 +256,7 @@ Quick check with XDS/dimple - ADPr density
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_12_adpr_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
-| mac1_12_adpr_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away |
+| mac1_12_adpr_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away - accidentally has 824 images because the data collection was incorrectly set for 7200 images and aborted |
 
 Mac1, 13 - skip
 
