--- a/docs/beamtime/20251125-als.md
+++ b/docs/beamtime/20251125-als.md
@@ -1,18 +1,28 @@
+---
+date: 
+  created: 2025-11-25  
+tags:
+    - ALS 8.3.1
+    - Mac1
+    - Huwe1
+    - Lysozyme
+---
+
 # 2025-11-25 @ ALS 8.3.1
 
-**Date Created:** 2025-11-25  
-**Tags:** ALS 831, Mac1, Huwe1, Lysozyme
-
 ## Overall Goals
+
 - Further optimize diffuse collection at 8.3.1
 - Lysozyme, Mac1 (P43 and C2), Huwe1 data collection
 - Mac1 soaks in both P43 and C2 spacegroups
 
 ## Participants
+
 - **In person:** Kara, James, Mehagan
 - **Remote:** Justin and Joseph for processing, Steve for setting up OSN sync
 
 ## Data
+
 - **Root directory at ALS:** `/data/mcfuser/ucsf/fraser/25Nov2025/`
 - **Root directory on OSN:** `s3://diffuse-als-public/20251125/`
 
@@ -38,19 +48,19 @@
 | Lysozyme | 20 mg/mL | From Hampton kit<br>30% PEG 5000, 1 M NaCl, 0.05 M Na Acetate trihydrate pH 4.6 | | |
 | Mac1 (C2) | SARS CoV2 NSP3 macrodomain, 15 mg/mL Mac1 in 150 mM NaCl, 20 mM Tris pH 8, 5% glycerol | 100 mM Tris pH 8.5, 100 mM Na Acetate, 28% PEG 4000 | 200 nL protein solution + 200 nL well solution | Kara purified protein and setup 2 trays on 11/23<br>Reference PDB: 7KR0 |
 
-## Data Collection
+## Data collection, day 1
 
-### Lysozyme, 1
+### 1. Lysozyme
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/lysozyme/lysozyme_1`
+Subdirectory: `lysozyme/lysozyme_1`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | lysozyme_1 | 30 | 750 | 0.1 | 7200 | 0.01 | 175 | Crystal slipped, aborted run |
 
-### Mac1, 1
+### 2. Mac1
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_1`
+Subdirectory: `mac1/mac1_1`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
@@ -59,7 +69,9 @@
 
 Need to get rid of collimator rings - try lowering energy to see if that helps as a start
 
-**Switching to 11.145 keV - will be higher dose rate**
+!!! note
+
+    Switching to 11.145 keV - will be higher dose rate
 
 | Parameter | Value | Notes |
 |-----------|-------|-------|
@@ -67,9 +79,9 @@ Need to get rid of collimator rings - try lowering energy to see if that helps a
 | Beam size | 100 µm x 100 µm, circle | Divergence the same - 0.6 x 0.1 mrad<br>Some tune up after changing energy |
 | Flux | 3.26 x 10¹⁰ ph/s | 2573 Gy/s<br>But we are in decay mode of the ring so will drop over time |
 
-### Mac1, 2
+### 3. Mac1
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_2`
+Subdirectory: `mac1/mac1_2`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
@@ -78,27 +90,27 @@ Need to get rid of collimator rings - try lowering energy to see if that helps a
 
 Based on XDS plots - for sure damaging beyond 440 deg (based on Garman limit), damaging more like 180 deg for R_d, might be okay
 
-### Mac1, 3
+### 4. Mac1
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_3`
+Subdirectory: `mac1/mac1_3`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_3_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | Looking good |
 | mac1_3_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Moved 150 away |
 
-### Huwe1, 1
+### 5. Huwe1
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/huwe1/huwe1_1`
+Subdirectory: `huwe1/huwe1_1`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | huwe1_1_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | Looking good |
 | huwe1_1_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Moved 250 away<br><br>Also looks like it survives to about 360 |
 
-### Huwe1, 2
+### 6. Huwe1
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/huwe1/huwe1_2`
+Subdirectory: `huwe1/huwe1_2`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
@@ -108,9 +120,9 @@ Based on XDS plots - for sure damaging beyond 440 deg (based on Garman limit), d
 
 James increased the ram limit to help
 
-### Huwe1, 3
+### 7. Huwe1
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/huwe1/huwe1_3`
+Subdirectory: `huwe1/huwe1_3`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
@@ -123,9 +135,9 @@ James increased the ram limit to help
 - Second soak - starts at 6 min
 - Third soak - starts at 11 min
 
-### Mac1, 4
+### 8. Mac1
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_4`
+Subdirectory: `mac1/mac1_4`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
@@ -134,111 +146,139 @@ James increased the ram limit to help
 
 Now at 1700 Gy/s, ring keeps decaying
 
-### Mac1, 5 - skip, crystal slipped
+### 9. Mac1
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_5`
+Subdirectory: `mac1/mac1_5`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_5_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | |
 | mac1_5_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | |
 
-### Mac1, 6, ADPr for ~50 min (9 uL + 1 uL)
+!!! warning
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_6`
+    Skip, crystal slipped
 
-Quick check with XDS/dimple - looks like high ADPr occupancy
+### 10. Mac1 + ADPr 
+
+Soaked with ADPr for ~50 min (9 uL + 1 uL)
+
+Subdirectory: `mac1/mac1_6`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_6_adpr_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_6_adpr_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | All good, went 300 um away |
 
+!!! info
+
+    Quick check with XDS/dimple - looks like high ADPr occupancy
+
 Shutters closed by ALS - finally refilling the ring
 
 Beam back - tuneup.com  
 Flux - 5.922 x 10^10 ph/s, dose is 4668 Gy/s
 
-### Mac1, 7, ADPr for ~60 min (9 uL + 1 uL)
+### 11. Mac1 + ADPr 
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_7`
+Soaked with for ~60 min (9 uL + 1 uL)
 
-Quick check with XDS/dimple - fairly high occupancy, but not as high as Mac1_6
+Subdirectory: `mac1/mac1_7`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_7_adpr_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_7_adpr_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 250 um away |
 
-### Lysozyme, 2
+!!! info "Quick check with XDS/dimple"
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/lysozyme/lysozyme_2`
+    fairly high occupancy, but not as high as Mac1_6
+
+### 12. Lysozyme
+
+Subdirectory: `lysozyme/lysozyme_2`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | lysozyme_2_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | lysozyme_2_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 350 um away |
 
-### Lysozyme, 3
+### 13. Lysozyme
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/lysozyme/lysozyme_3`
+Subdirectory: `lysozyme/lysozyme_3`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | lysozyme_3_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | lysozyme_3_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away |
 
-### Mac1, 8, ADPr for ~15min (9 uL + 1 uL)
+### 14. Mac1 + ADPr
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_8`
+Soaked with ADPr for ~15min (9 uL + 1 uL)
 
-Quick check with XDS/dimple - density is there
+Subdirectory: `mac1/mac1_8`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_8_adpr_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_8_adpr_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away |
 
-### Mac1, 9, ADPr for ~30min (9 uL + 1 uL)
+!!! info "Quick check with XDS/dimple"
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_9`
+    density is there
 
-Quick check with XDS/dimple - density is there
+### 15. Mac1 + ADPr
+
+Soaked with ADPr for ~30min (9 uL + 1 uL)
+
+Subdirectory: `mac1/mac1_9`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_9_adpr_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_9_adpr_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 250 um away |
 
-### Mac1, 10, ADPr for ~20min (9 uL + 1 uL)
+!!! info "Quick check with XDS/dimple"
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_10`
+    density is there
 
-Quick check with XDS/dimple - pretty good occupancy - maybe due to smaller crystal?
+### 16. Mac1 + ADPr
+
+Soaked with ADPr for ~20min (9 uL + 1 uL)
+
+Subdirectory: `mac1/mac1_10`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_10_adpr_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_10_adpr_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away |
 
-### Mac1, 11, ADPr for ~50min (9 uL + 1 uL)
+!!! info "Quick check with XDS/dimple"
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_11`
+    pretty good occupancy - maybe due to smaller crystal?
 
-Quick check with XDS/dimple - lower occupancy, maybe due to larger crystal?
+### 17. Mac1 + ADPr
+
+Soaked with ADPr for ~50min (9 uL + 1 uL)
+
+Subdirectory: `mac1/mac1_11`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_11_adpr_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_11_adpr_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away |
 
+!!! info "Quick check with XDS/dimple"
+
+    lower occupancy, maybe due to larger crystal?
+
 Mac1 C2, 1 - test, skip
 
-**End of day 1**
+!!! success "End of day 1"
 
----
+## Data collection, day 2 
 
-## Data Collection - Day 2 (11.26.2025)
+11.26.2025
 
 Starting with long Mac1 P43 soaks
 
@@ -247,40 +287,52 @@ Starting with long Mac1 P43 soaks
 
 **Dose rate:** 4828 Gy/s
 
-### Mac1, 12, ADPr for ~90min (9 uL + 1 uL)
+### 18. Mac1 + ADPr 
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_12`
+Soaked with ADPr for ~90min (9 uL + 1 uL)
 
-Quick check with XDS/dimple - ADPr density
+Subdirectory: `mac1/mac1_12`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_12_adpr_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_12_adpr_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away - accidentally has 824 images because the data collection was incorrectly set for 7200 images and aborted |
 
+!!! info "Quick check with XDS/dimple"
+
+    ADPr density
+
 Mac1, 13 - skip
 
-### Mac1, 14, AVI 3731 (opener) added 100 nL directly to well H9 (multiple crystals) let sit for ~30 min
+### 19. Mac1 + AVI-3731
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_14`
+Added 100 nL directly to well H9 (multiple crystals) let sit for ~30 min
 
-Quick check with XDS/dimple - not sure what the compound is supposed to look like but there is positive density near V49, not many large sidechain motions though
+Subdirectory: `mac1/mac1_14`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_14_avi3731_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_14_avi3731_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away |
 
-### Mac1, 15, AVI 3731 (opener) added 100 nL directly to well H10 (multiple crystals) let sit for ~30 min
+!!! info "Quick check with XDS/dimple"
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_15`
+    Not sure what the compound is supposed to look like but there is positive density near V49, not many large sidechain motions though
 
-Quick check with XDS/dimple - for sure ligand density, not a ton of sidechain motions
+### 20. Mac1 + AVI-3731 
+
+Added 100 nL directly to well H10 (multiple crystals) let sit for ~30 min
+
+Subdirectory: `mac1/mac1_15`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_15_avi3731_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_15_avi3731_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away |
+
+!!! info "Quick check with XDS/dimple"
+
+    for sure ligand density, not a ton of sidechain motions
 
 At 60 min, crystals are dead for drops H9 and H10
 
@@ -288,50 +340,69 @@ For G10, added 200 nL of well solution and then 100 nL of AVI3731
 
 Also made two drops - 4.5 uL each, transferred one crystal per drop, then added 0.5 uL of AVI3731 to the drop
 
-### Mac1, 16, AVI 3731 (opener) added 200 nL reservoir + 100 nL AVI3731 directly to well G10 (multiple crystals) let sit for ~45 min
+### 21. Mac1 + AVI-3731 
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_16`
+Added 200 nL reservoir + 100 nL AVI-3731 directly to well G10 (multiple crystals) let sit for ~45 min
 
-Quick check with XDS/dimple - seeing large green density, not a lot of motions
+Subdirectory: `mac1/mac1_16`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_16_avi3731_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | All good |
 | mac1_16_avi3731_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away |
 
-### Mac1, 17, AVI 3731 (opener) made 4.5 uL drop of reservoir solution, added crystal, and then added 0.5 uL AVI3731 (single crystal) let sit for ~45 min
+!!! info "Quick check with XDS/dimple"
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_17`
+    seeing large green density, not a lot of motions
 
-Quick check with XDS/dimple - larger green blob for ligand
+### 22. Mac1 + AVI-3731
+
+Made 4.5 uL drop of reservoir solution, added crystal, and then added 0.5 uL AVI-3731 (single crystal) let sit for ~45 min
+
+Subdirectory: `mac1/mac1_17`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_17_avi3731_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | Diffraction a bit weaker than typical - looks like I only got a piece of the crystal |
 | mac1_17_avi3731_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 400 um away |
 
-### Mac1, 18, AVI 3731 (opener) made 4.5 uL drop of reservoir solution, added crystal, and then added 0.5 uL AVI3731 (single crystal) let sit for ~60 min (second drop)
+!!! info "Quick check with XDS/dimple"
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_18`
+    larger green blob for ligand
 
-Quick check with XDS/dimple - stronger ligand density and also some other peaks?
+### 23. Mac1 + AVI 3731
+
+Made 4.5 uL drop of reservoir solution, added crystal, and then added 0.5 uL AVI-3731 (single crystal) let sit for ~60 min (second drop)
+
+Subdirectory: `mac1/mac1_18`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_18_avi3731_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | Was able to loop the entire crystal, all good |
 | mac1_18_avi3731_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 400 um away |
 
+!!! info "Quick check with XDS/dimple"
+    
+    stronger ligand density and also some other peaks?
+
+
 Made 2 more 4.5 uL drops, added crystal, and then added 0.5 uL of AVI 3731 - let sit for 1.5-2 hrs
 
 Mac1 C2, 2 - lost it or not diffracting well, skip
 
-### Mac1, 19, AVI 3731 (opener) made 4.5 uL drop of reservoir solution, added crystal, and then added 0.5 uL AVI3731 (single crystal) let sit for ~120 min
+### 24. Mac1 + AVI-3731 
 
-**Directory:** `/data/mcfuser/ucsf/fraser/25Nov2025/mac1/mac1_19`
+Made 4.5 uL drop of reservoir solution, added crystal, and then added 0.5 uL AVI-3731 (single crystal) let sit for ~120 min
 
-Quick check with XDS/dimple - strong ligand density
+Subdirectory: `mac1/mac1_19`
 
 | Prefix | φ0 (deg.) | φ1 (deg.) | ∆φ (deg.) | Images | ∆t (s) | d (mm) | Notes |
 |--------|-----------|-----------|-----------|--------|--------|--------|-------|
 | mac1_19_avi3731_data | 0 | 720 | 0.1 | 7200 | 0.02 | 175 | all good |
 | mac1_19_avi3731_bg | 0 | 720 | 1 | 720 | 0.2 | 175 | Went 200 um away |
+
+!!! info "Quick check with XDS/dimple"
+
+    strong ligand density
+
+!!! success "done!"
